# GreedyClaw

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  install.ps1  install.sh
.github/workflows/: ci.yml
brain/: Dockerfile  __init__.py  __main__.py  agent.py  config.py  llm.py  main.py  memory.py  requirements.txt  scraper.py  tools.py
brain/skills/crypto-momentum/: SKILL.md
brain/skills/forex-fundamentals/: SKILL.md
brain/skills/xauusd-sentiment/: SKILL.md
brain/tests/: test_memory.py  test_tools.py
config/: default.toml
integrations/mcp-server/: index.ts  package-lock.json  package.json
integrations/openclaw-extension/: index.ts  package.json
integrations/openclaw-extension/src/: trading-tools.ts
integrations/openclaw-skill/: SKILL.md
mt5-bridge/: Dockerfile  ccxt_bridge.py  mt5_bridge.py  requirements.txt
src/: audit.rs  config.rs  dashboard.rs  error.rs  main.rs  risk.rs  server.rs  ws.rs
src/api/: mod.rs  scanner_api.rs  status.rs  trade.rs  types.rs
src/exchange/: binance.rs  ccxt.rs  mod.rs  mt5.rs  pumpfun.rs  pumpswap.rs  types.rs
src/scanner/: aggregator.rs  mod.rs  parser.rs  scoring.rs  strategy.rs  stream.rs
src/solana/: constants.rs  mod.rs  rpc.rs  tx.rs  wallet.rs
