[package]
name = "greedyclaw"
version = "0.1.0"
edition = "2021"
description = "GreedyClaw — AI-native trading execution gateway"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# HTTP client (Binance REST)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config
dotenvy = "0.15"
dirs = "6"

# Crypto (Binance HMAC-SHA256 signing)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Solana (Ed25519 signing, PDA derivation, base58/64)
ed25519-dalek = { version = "2", features = ["std"] }
curve25519-dalek = "4"
bs58 = "0.5"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Database (audit log)
rusqlite = { version = "0.31", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for order client IDs
uuid = { version = "1", features = ["v4"] }

# Concurrent state
dashmap = "6"

# gRPC (Yellowstone/Geyser for PumpFun streaming)
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
futures = "0.3"
backoff = { version = "0.4", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
